fix: corregir carga de JSON y relaciones entre entidades